--- a/main.html
+++ b/main.html
@@ -38,19 +38,41 @@
     </style>
 </head>
 <body>
+    <h1>João Calvino</h1>
+    <div class="book">
+        <img src="capas/1corintios.jpg" alt="1 Coríntios">
+        <div class="book-title">1 Coríntios</div>
+        <button class="download-button" onclick="downloadBook('books/1 Coríntios (Comentários Bíblicos João Calvino).epub')">Baixar</button>
+    </div>
+    <div class="book">
+        <img src="capas/salmos.jpg" alt="Salmos">
+        <div class="book-title">Salmos</div>
+        <button class="download-button" onclick="downloadBook('books/Salmos Volume 1 (Série Comentários Bíblicos)(João Calvino).epub')">Baixar(epub)</button>
+        <button class="download-button" onclick="downloadBook('books/Salmos (João Calvino).pdf')">Baixar(pdf)</button>
+    </div>
+    <div class="book">
+        <img src="capas/hebreus.jpg" alt="hebreus">
+        <div class="book-title">Hebreus</div>
+        <button class="download-button" onclick="downloadBook('books/Hebreus (João Calvino).epub')">Baixar</button>
+    </div>
+    <script>
+        function downloadBook(fileName) {
+            window.location.href = fileName;
+        }        
+    </script>
     <h1>Fiódor Dostoievski</h1>
     <div class="book">
-        <img src="noites-brancas.jpg" alt="Noites Brancas">
+        <img src="capas/noites-brancas.jpg" alt="Noites Brancas">
         <div class="book-title">Noites Brancas</div>
         <button class="download-button" onclick="downloadBook('books/Noites Brancas (Fiódor Dostoiévski).epub')">Baixar</button>
     </div>
     <div class="book">
-        <img src="crime-e-castigo.jpg" alt="Crime e Castigo">
+        <img src="capas/crime-e-castigo.jpg" alt="Crime e Castigo">
         <div class="book-title">Crime e Castigo</div>
         <button class="download-button" onclick="downloadBook('books/Crime e castigo (Fiodor Dostoievski).epub')">Baixar</button>
     </div>
     <div class="book">
-        <img src="irmaos-karamazov.jpg" alt="Irmãos Kamarázov">
+        <img src="capas/irmaos-karamazov.jpg" alt="Irmãos Kamarázov">
         <div class="book-title">Irmãos Kamarázov</div>
         <button class="download-button" onclick="downloadBook('books/irmãos Karamázov, Os (Fiodor Dostoievski, Ulysses Boscolo etc.).epub')">Baixar</button>
     </div>
@@ -62,17 +84,17 @@
 
     <h1>J.K Rowling</h1>
     <div class="book">
-        <img src="pedra-filosofal.jpg" alt="Harry Potter e a Pedra Filosofal">
+        <img src="capas/pedra-filosofal.jpg" alt="Harry Potter e a Pedra Filosofal">
         <div class="book-title">Harry Potter e a Pedra Filosofal</div>
         <button class="download-button" onclick="downloadBook('books/Harry Potter e a Pedra Filosofal (J.K. Rowling).epub')">Baixar</button>
     </div>
     <div class="book">
-        <img src="camara-secreta.jpg" alt="Harry Potter e a Câmara Secreta">
+        <img src="capas/camara-secreta.jpg" alt="Harry Potter e a Câmara Secreta">
         <div class="book-title">Harry Potter e a Câmara Secreta</div>
         <button class="download-button" onclick="downloadBook('books/Harry Potter e a Câmara Secreta (J.K. Rowling).epub')">Baixar</button>
     </div>
     <div class="book">
-        <img src="prisioneiro-de-azkaban.jpg" alt="Harry Potter e o Prisioneiro de Azkaban">
+        <img src="capas/prisioneiro-de-azkaban.jpg" alt="Harry Potter e o Prisioneiro de Azkaban">
         <div class="book-title">Harry Potter e o Prisioneiro de Azkaban</div>
         <button class="download-button" onclick="downloadBook('books/Harry Potter e o Prisioneiro de Azkaban (J.K. Rowling).epub')">Baixar</button>
     </div>
@@ -83,17 +105,17 @@
     </script>
      <h1>George Orwell</h1>
      <div class="book">
-         <img src="1984.jpg" alt="1984">
+         <img src="capas/1984.jpg" alt="1984">
          <div class="book-title">1984</div>
          <button class="download-button" onclick="downloadBook('books/1984.epub')">Baixar</button>
      </div>
      <div class="book">
-         <img src="bichos.jpg" alt="A Revolução dos Bichos">
+         <img src="capas/bichos.jpg" alt="A Revolução dos Bichos">
          <div class="book-title">A Revolução dos Bichos</div>
          <button class="download-button" onclick="downloadBook('books/a revolucao dos bichos.epub')">Baixar</button>
      </div>
      <div class="book">
-         <img src="baleia.jpg" alt="Dentro da Baleia e outros ensaios">
+         <img src="capas/baleia.jpg" alt="Dentro da Baleia e outros ensaios">
          <div class="book-title">Dentro da Baleia e outros ensaios</div>
          <button class="download-button" onclick="downloadBook('books/Dentro da baleia e outros ensaios (George Orwell).epub')">Baixar</button>
      </div>
