--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
     <div class="book">
         <img src="capas/hebreus.jpg" alt="hebreus">
         <div class="book-title">Hebreus</div>
-        <button class="download-button" onclick="downloadBook('books/Hebreus (João Calvino).epub')">Baixar</button>
+        <button class="download-button" onclick="downloadBook('books/Hebreus (João Calvino).epub')">Baixar(epub)</button>
     </div>
     <script>
         function downloadBook(fileName) {
@@ -64,17 +64,17 @@
     <div class="book">
         <img src="capas/noites-brancas.jpg" alt="Noites Brancas">
         <div class="book-title">Noites Brancas</div>
-        <button class="download-button" onclick="downloadBook('books/Noites Brancas (Fiódor Dostoiévski).epub')">Baixar</button>
+        <button class="download-button" onclick="downloadBook('books/Noites Brancas (Fiódor Dostoiévski).epub')">Baixar(epub)</button>
     </div>
     <div class="book">
         <img src="capas/crime-e-castigo.jpg" alt="Crime e Castigo">
         <div class="book-title">Crime e Castigo</div>
-        <button class="download-button" onclick="downloadBook('books/Crime e castigo (Fiodor Dostoievski).epub')">Baixar</button>
+        <button class="download-button" onclick="downloadBook('books/Crime e castigo (Fiodor Dostoievski).epub')">Baixar(epub)</button>
     </div>
     <div class="book">
         <img src="capas/irmaos-karamazov.jpg" alt="Irmãos Kamarázov">
         <div class="book-title">Irmãos Kamarázov</div>
-        <button class="download-button" onclick="downloadBook('books/irmãos Karamázov, Os (Fiodor Dostoievski, Ulysses Boscolo etc.).epub')">Baixar</button>
+        <button class="download-button" onclick="downloadBook('books/irmãos Karamázov, Os (Fiodor Dostoievski, Ulysses Boscolo etc.).epub')">Baixar(epub)</button>
     </div>
     <script>
         function downloadBook(fileName) {
@@ -86,17 +86,17 @@
     <div class="book">
         <img src="capas/pedra-filosofal.jpg" alt="Harry Potter e a Pedra Filosofal">
         <div class="book-title">Harry Potter e a Pedra Filosofal</div>
-        <button class="download-button" onclick="downloadBook('books/Harry Potter e a Pedra Filosofal (J.K. Rowling).epub')">Baixar</button>
+        <button class="download-button" onclick="downloadBook('books/Harry Potter e a Pedra Filosofal (J.K. Rowling).epub')">Baixar(epub)</button>
     </div>
     <div class="book">
         <img src="capas/camara-secreta.jpg" alt="Harry Potter e a Câmara Secreta">
         <div class="book-title">Harry Potter e a Câmara Secreta</div>
-        <button class="download-button" onclick="downloadBook('books/Harry Potter e a Câmara Secreta (J.K. Rowling).epub')">Baixar</button>
+        <button class="download-button" onclick="downloadBook('books/Harry Potter e a Câmara Secreta (J.K. Rowling).epub')">Baixar(epub)</button>
     </div>
     <div class="book">
         <img src="capas/prisioneiro-de-azkaban.jpg" alt="Harry Potter e o Prisioneiro de Azkaban">
         <div class="book-title">Harry Potter e o Prisioneiro de Azkaban</div>
-        <button class="download-button" onclick="downloadBook('books/Harry Potter e o Prisioneiro de Azkaban (J.K. Rowling).epub')">Baixar</button>
+        <button class="download-button" onclick="downloadBook('books/Harry Potter e o Prisioneiro de Azkaban (J.K. Rowling).epub')">Baixar(epub)</button>
     </div>
     <script>
         function downloadBook(fileName) {
@@ -107,17 +107,17 @@
      <div class="book">
          <img src="capas/1984.jpg" alt="1984">
          <div class="book-title">1984</div>
-         <button class="download-button" onclick="downloadBook('books/1984.epub')">Baixar</button>
+         <button class="download-button" onclick="downloadBook('books/1984.epub')">Baixar(epub)</button>
      </div>
      <div class="book">
          <img src="capas/bichos.jpg" alt="A Revolução dos Bichos">
          <div class="book-title">A Revolução dos Bichos</div>
-         <button class="download-button" onclick="downloadBook('books/a revolucao dos bichos.epub')">Baixar</button>
+         <button class="download-button" onclick="downloadBook('books/a revolucao dos bichos.epub')">Baixar(epub)</button>
      </div>
      <div class="book">
          <img src="capas/baleia.jpg" alt="Dentro da Baleia e outros ensaios">
          <div class="book-title">Dentro da Baleia e outros ensaios</div>
-         <button class="download-button" onclick="downloadBook('books/Dentro da baleia e outros ensaios (George Orwell).epub')">Baixar</button>
+         <button class="download-button" onclick="downloadBook('books/Dentro da baleia e outros ensaios (George Orwell).epub')">Baixar(epub)</button>
      </div>
      <script>
          function downloadBook(fileName) {
