--- a/main.html
+++ b/main.html
@@ -98,6 +98,26 @@
         <div class="book-title">Harry Potter e o Prisioneiro de Azkaban</div>
         <button class="download-button" onclick="downloadBook('books/Harry Potter e o Prisioneiro de Azkaban (J.K. Rowling).epub')">Baixar(epub)</button>
     </div>
+    <div class="book">
+        <img src="capas/calice-de-fogo.jpg" alt="Harry Potter e o Cálice de Fogo">
+        <div class="book-title">Harry Potter e o Cálice de Fogo</div>
+        <button class="download-button" onclick="downloadBook('books/Harry Potter e o Cálice de Fogo (J.K. Rowling).epub')">Baixar(epub)</button>
+    </div>
+    <div class="book">
+        <img src="capas/ordem-fenix.jpg" alt="Harry Potter e a Ordem da Fênix">
+        <div class="book-title">Harry Potter e a Ordem da Fênix</div>
+        <button class="download-button" onclick="downloadBook('books/Harry Potter e a Ordem da Fênix (J.K. Rowling).epub')">Baixar(epub)</button>
+    </div>
+    <div class="book">
+        <img src="capas/enigma-principe.jpg" alt="Harry Potter e o Enigma do Príncipe">
+        <div class="book-title">Harry Potter e o Enigma do Príncipe</div>
+        <button class="download-button" onclick="downloadBook('books/Harry Potter e o Enigma do Príncipe (J.K. Rowling).epub')">Baixar(epub)</button>
+    </div>
+    <div class="book">
+        <img src="capas/relíquias-morte.jpg" alt="Harry Potter e as Relíquias da Morte">
+        <div class="book-title">Harry Potter e as Relíquias da Morte</div>
+        <button class="download-button" onclick="downloadBook('books/Harry Potter e as Relíquias da Morte (J.K. Rowling).epub')">Baixar(epub)</button>
+    </div>
     <script>
         function downloadBook(fileName) {
             window.location.href = fileName;
