remoção de arquivo

--- a/main.html
+++ b/main.html
@@ -90,7 +90,7 @@
     </div>
     <div class="book">
         <img src="capas/camara-secreta.jpg" alt="Harry Potter e a Câmara Secreta">
-        <div class="book-title">Harry Potter e a Câmara Secreta</div>
+        <div class="book-title">Harry Potter e a Câmara Secreta</div>========
         <button class="download-button" onclick="downloadBook('books/Harry Potter e a Câmara Secreta (J.K. Rowling).epub')">Baixar(epub)</button>
     </div>
     <div class="book">
