--- a/livraria.html
+++ b/livraria.html
@@ -55,6 +55,11 @@
         <div class="book-title">Hebreus</div>
         <button class="download-button" onclick="downloadBook('books/Hebreus (João Calvino).epub')">Baixar(epub)</button>
     </div>
+    <div class="book">
+        <img src="capas/romanos.jpg" alt="Romanos">
+        <div class="book-title">Romanos</div>
+        <button class="download-button" onclick="downloadBook('books/Romanos (João Calvino).epub')">Baixar(epub)</button>
+    </div>
     <script>
         function downloadBook(fileName) {
             window.location.href = fileName;
