--- a/livraria.html
+++ b/livraria.html
@@ -60,6 +60,11 @@
         <div class="book-title">Romanos</div>
         <button class="download-button" onclick="downloadBook('books/Romanos (João Calvino).epub')">Baixar(epub)</button>
     </div>
+    <div class="book">
+        <img src="capas/evangelho-joao.jpg" alt="Evangelho de João">
+        <div class="book-title">Evangelho de João</div>
+        <button class="download-button" onclick="downloadBook('books/Evangelho de João (João Calvino).epub')">Baixar(epub)</button>
+    </div>
     <script>
         function downloadBook(fileName) {
             window.location.href = fileName;
